--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^12.10.3",
     "lucide-react": "^0.508.0",
     "next": "15.3.2",
+    "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
